--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <h2 class="title">I’m Mariane Glad to see you!
             </h2>
 
-        <article class="paragraph">I’m a software developer! I can help you build a product , 
+        <p class="paragraph">I’m a software developer! I can help you build a product , 
             feature or website Look through some of my work and experience! 
             If you like what you see and have a project you need coded, don’t hestiate to contact me.
-        </article>
+        </p>
 
         <p class="line">LET'S CONNECT</p>
 
