Fixed linter errors

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <section class="first-page">
+    <div class="first-page">
         <header class="header-container">
             <a class="logo">My Logo</a>
     
@@ -45,6 +45,6 @@
                         src="src/Angel.png" alt="Angel-List"/></a></li>
             </ul>
         </section>
-    </section>
+    </div>
 </body>
 </html>
