--- a/index.html
+++ b/index.html
@@ -46,5 +46,191 @@
             </ul>
         </section>
     </div>
+
+    <section class="works-section">
+        <ul class="card">
+            <li class="project">
+                <img src="src/SnapshootPortfolio.png" alt="Snapshot">
+                <div class="description">
+                    <h1 class="workstitle">Tonic</h1>
+                    <div class="info">
+                        <p class="subTitle">CANOPY</p>
+                        <ul class="infoContainer">
+                            <li class="role">Back End Dev</li>
+                            <li class="year">2015</li>
+                        </ul>
+                    </div>
+                    <p class="projectDescription">A daily selection of privately personalized 
+                        reads; no accounts or sign-ups required.
+                    </p>
+                    <div class="tags">
+                        <ul class="tagsFlex">
+                            <li class="html">HTML</li>
+                            <li class="css">CSS</li>
+                            <li class="javascript">Javascript</li>
+                        </ul>
+                    </div>
+                    <button type="button" class="viewProject">
+                        See Project
+                    </button>
+                </div>
+            </li>
+        </ul>
+
+        <ul class="card">
+            <li class="project">
+                <img src="src/SnapshootPortfolio1.png" alt="Snapshot">
+                <div class="description">
+                    <h1 class="workstitle">Multi-Post Stories</h1>
+                    <div class="info">
+                        <p class="subTitle">CANOPY</p>
+                        <ul class="infoContainer">
+                            <li class="role">Back End Dev</li>
+                            <li class="year">2015</li>
+                        </ul>
+                    </div>
+                    <p class="projectDescription">A daily selection of privately personalized 
+                        reads; no accounts or sign-ups required.
+                    </p>
+                    <div class="tags">
+                        <ul class="tagsFlex">
+                            <li class="html">HTML</li>
+                            <li class="css">CSS</li>
+                            <li class="javascript">Javascript</li>
+                        </ul>
+                    </div>
+                    <button type="button" class="viewProject">
+                        See Project
+                    </button>
+                </div>
+            </li>
+        </ul>
+
+        <ul class="card">
+            <li class="project">
+                <img src="src/SnapshootPortfolio2.png" alt="Snapshot">
+                <div class="description">
+                    <h1 class="workstitle">Tonic</h1>
+                    <div class="info">
+                        <p class="subTitle">CANOPY</p>
+                        <ul class="infoContainer">
+                            <li class="role">Back End Dev</li>
+                            <li class="year">2015</li>
+                        </ul>
+                    </div>
+                    <p class="projectDescription">A daily selection of privately personalized 
+                        reads; no accounts or sign-ups required.
+                    </p>
+                    <div class="tags">
+                        <ul class="tagsFlex">
+                            <li class="html">HTML</li>
+                            <li class="css">CSS</li>
+                            <li class="javascript">Javascript</li>
+                        </ul>
+                    </div>
+                    <button type="button" class="viewProject">
+                        See Project
+                    </button>
+                </div>
+            </li>
+        </ul>
+
+        <ul class="card">
+            <li class="project">
+                <img src="src/SnapshootPortfolio3.png" alt="Snapshot">
+                <div class="description">
+                    <h1 class="workstitle">Multi-Post Stories</h1>
+                    <div class="info">
+                        <p class="subTitle">CANOPY</p>
+                        <ul class="infoContainer">
+                            <li class="role">Back End Dev</li>
+                            <li class="year">2015</li>
+                        </ul>
+                    </div>
+                    <p class="projectDescription">A daily selection of privately personalized 
+                        reads; no accounts or sign-ups required.
+                    </p>
+                    <div class="tags">
+                        <ul class="tagsFlex">
+                            <li class="html">HTML</li>
+                            <li class="css">CSS</li>
+                            <li class="javascript">Javascript</li>
+                        </ul>
+                    </div>
+                    <button type="button" class="viewProject">
+                        See Project
+                    </button>
+                </div>
+            </li>
+        </ul>
+    </section>
+
+    <section class="about-section" >
+        <h1 class="title">
+            About Myself
+        </h1>
+
+        <p class="paragraph">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! 
+            If you like what you see and have a project you need coded, don’t hestiate to contact me.
+        </p>
+
+        <p class="line">LET’S CONNECT</p>
+    
+              <ul class="social-media-icons">
+                <li><a href=""><img class="icon github" 
+                    src="src/Github.png" alt="github-icon"/></a></li>
+
+                <li><a href=""><img class="icon linkedin" 
+                    src="src/Linkedin-icon.png" alt="linkedin-icon"/></a></li>
+
+                <li><a href=""><img class="icon finger" 
+                    src="src/Angel.png" alt="AngelList"/></a></li>
+
+                <li><a href=""><img class="icon twitter" 
+                    src="src/Twitter.png" alt="twitter-icon"/></a></li>
+
+                <li><a href=""><img class="icon msign" 
+                    src="src/m.png" alt="msign"/></a></li>
+              </ul>
+
+            <button type="button" class="resumeButton">Get my resume</button> 
+            
+            <div class="mySkills">
+                <ul class="skills">
+                  <li>
+                    <section class="skillsDropdown">
+                      <h3 class="skillsTitle">Languages</h3>
+                      <img src="src/IconDown.png" alt="arrowdown" />
+                    </section>
+                    <ul class="skillsDesc">
+                      <li class="skillsDescList">
+                        <img src="src/javascript.png" alt="javaScript" />
+                        <p class="skillsListTitle">JavaScript</p>
+                      </li>
+                      <li class="skillsDescList">
+                        <img src="src/html5.png" alt="javaScript" />
+                        <p class="skillsListTitle">HTML</p>
+                      </li>
+                      <li class="skillsDescList">
+                        <img src="src/css3.png" alt="javaScript" />
+                        <p class="skillsListTitle">CSS</p>
+                      </li>
+                    </ul>
+                  </li>
+                  <li>
+                    <section class="skillsDropdown"> 
+                      <h3 class="skillsTitle">Frameworks</h3>
+                      <img src="src/IconRight.png" alt="arrowright" />
+                    </section>
+                  </li>
+                  <li>
+                    <section class="skillsDropdown">
+                      <h3 class="skillsTitle">Skills</h3>
+                      <img src="src/IconRight.png" alt="arrowright" />
+                    </section>
+                  </li>
+                </ul>
+              </div>
+    </section>
 </body>
 </html>
