Added my name in title

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <section class="headline">
     
-            <h1 class="title">I'm Mariane Glad to see you!
+            <h1 class="title">I'm Shaheda Glad to see you!
                 </h1>
     
             <p class="paragraph">I'm a software developer! I can help you build a product , 
