--- a/index.html
+++ b/index.html
@@ -337,15 +337,15 @@
             <form action="https://formspree.io/f/mbjwowny" method="post">
             <ul class="inputs">
                 <li>
-                    <label for="name"></label>
+                    <label for="name">Enter your name here</label>
                     <input type="text" id="name" name="name" placeholder="Enter your name here ..." maxlength="30" required />
                 </li>
                 <li>
-                    <label for="email"></label>
+                    <label for="email">Enter your email here</label>
                     <input type="email" id="email" name="email" placeholder="Enter your e-mail here ..." required />
                 </li>
                 <li>
-                    <label for="message"></label>
+                    <label for="message">Give a message</label>
                     <textarea id="message" placeholder="Type your message here ..." maxlength="500" required></textarea>
                 </li>
                 <li class="formSubmit">
