Fixed broken links

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </section>
     </div>
 
-    <section class="works-section">
+    <section class="works-section" id="works-section">
         <ul class="card1">
             <li class="project">
                 <img class="mobileimg" src="src/SnapshootPortfolio.png" alt="Snapshot">
@@ -259,7 +259,7 @@
         </ul>
     </section>
 
-    <section class="about-section" >
+    <section class="about-section" id="about-section">
         <div class="about-hero">
             <h2 class="title" id="about">
                 About <br>Myself
@@ -330,7 +330,7 @@
               </div>
     </section>
 
-    <footer class="contact-form">
+    <footer class="contact-form" id="contact-form">
         <div class="contactContainer">
             <h2 class="form-title">Contact me</h2>
             <p class="content">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it</p>
