Removed body scroll when mobile menu is open

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Shaheda's Portfolio</title>
 </head>
-<body>
+<body class="scroll">
     <div class="first-page">
         <header class="header-container">
             <a class="logo">My Logo</a>
