Added Works section Dynamically

--- a/index.html
+++ b/index.html
@@ -64,207 +64,20 @@
         </section>
     </div>
 
-    <section class="works-section" id="works-section">
-        <ul class="card1">
-            <li class="project">
-                <img class="mobileimg" src="src/SnapshootPortfolio.png" alt="Snapshot">
-                <img class="image" src="desk/SnapshootPortfolio4.png" alt="Snapshot">
-                <div class="description">
-                    <h2 class="workstitle">Tonic</h2>
-                    <div class="info">
-                        <p class="subTitle">CANOPY</p>
-                        <ul class="infoContainer">
-                            <li class="role">Back End Dev</li>
-                            <li class="year">2015</li>
-                        </ul>
-                    </div>
-                    <p class="projectDescription">A daily selection of privately personalized 
-                        reads; no accounts or sign-ups required.
-                    </p>
-                    <div class="tags">
-                        <ul class="tagsFlex">
-                            <li class="html">HTML</li>
-                            <li class="css">CSS</li>
-                            <li class="javascript">Javascript</li>
-                        </ul>
-                    </div>
-                    <button type="button" class="viewProject">
-                        See Project
-                    </button>
-                </div>
-            </li>
-        </ul>
+    <section class="works-section" id="works" >
+        <section class="card1"></section>
+        <!-- <section class="card2"></section>
 
-        <ul class="card2">
-            <li class="project">
-                <img class="image3" src="src/SnapshootPortfolio1.png" alt="Snapshot">
-                <div class="description reverse">
-                    <h2 class="workstitle">Multi-Post Stories</h2>
-                    <div class="info">
-                        <p class="subTitle">CANOPY</p>
-                        <ul class="infoContainer">
-                            <li class="role">Back End Dev</li>
-                            <li class="year">2015</li>
-                        </ul>
-                    </div>
-                    <p class="projectDescription">A daily selection of privately personalized 
-                        reads; no accounts or sign-ups required.
-                    </p>
-                    <div class="tags">
-                        <ul class="tagsFlex">
-                            <li class="html">HTML</li>
-                            <li class="css">CSS</li>
-                            <li class="javascript">Javascript</li>
-                        </ul>
-                    </div>
-                    <button type="button" class="viewProject">
-                        See Project
-                    </button>
-                </div>
-            </li>
-        </ul>
+        <section class="card3"></section>
 
-        <ul class="card3">
-            <li class="project">
-                <img src="src/SnapshootPortfolio2.png" alt="Snapshot">
-                <div class="description">
-                    <h2 class="workstitle">Tonic</h2>
-                    <div class="info">
-                        <p class="subTitle">CANOPY</p>
-                        <ul class="infoContainer">
-                            <li class="role">Back End Dev</li>
-                            <li class="year">2015</li>
-                        </ul>
-                    </div>
-                    <p class="projectDescription">A daily selection of privately personalized 
-                        reads; no accounts or sign-ups required.
-                    </p>
-                    <div class="tags">
-                        <ul class="tagsFlex">
-                            <li class="html">HTML</li>
-                            <li class="css">CSS</li>
-                            <li class="javascript">Javascript</li>
-                        </ul>
-                    </div>
-                    <button type="button" class="viewProject">
-                        See Project
-                    </button>
-                </div>
-            </li>
-        </ul>
+        <section class="card4"></section>
 
-        <ul class="card4">
-            <li class="project">
-                <img class="image2" src="src/SnapshootPortfolio3.png" alt="Snapshot">
-                <div class="description">
-                    <h2 class="workstitle">Multi-Post Stories</h2>
-                    <div class="info">
-                        <p class="subTitle">CANOPY</p>
-                        <ul class="infoContainer">
-                            <li class="role">Back End Dev</li>
-                            <li class="year">2015</li>
-                        </ul>
-                    </div>
-                    <p class="projectDescription">A daily selection of privately personalized 
-                        reads; no accounts or sign-ups required.
-                    </p>
-                    <div class="tags">
-                        <ul class="tagsFlex">
-                            <li class="html">HTML</li>
-                            <li class="css">CSS</li>
-                            <li class="javascript">Javascript</li>
-                        </ul>
-                    </div>
-                    <button type="button" class="viewProject">
-                        See Project
-                    </button>
-                </div>
-            </li>
-        </ul>
-        <ul class="card5">
-            <li class="project">
-                <img class="imageReverse" src="desk/SnapshootPortfolio5.png" alt="Snapshot">
-                <div class="descriptionReverse">
-                    <h2 class="workstitle">Multi-Post Stories</h2>
-                    <div class="info">
-                        <p class="subTitle">FACEBOOK</p>
-                        <ul class="infoContainer">
-                            <li class="role">Full Stack Dev</li>
-                            <li class="year">2015</li>
-                        </ul>
-                    </div>
-                    <p class="projectDescription">Experimental content creation feature that allows users to add to an existing story over the course of a day without spamming their friends.
-                    </p>
-                    <div class="tags">
-                        <ul class="tagsFlex">
-                            <li class="html">HTML</li>
-                            <li class="ruby">Ruby on rails</li>
-                            <li class="css">CSS</li>
-                            <li class="javascript">Javascript</li>
-                        </ul>
-                    </div>
-                    <button type="button" class="viewProject">
-                        See Project
-                    </button>
-                </div>
-            </li>
-        </ul>
-        <ul class="card6">
-            <li class="project">
-                <img class="image 2" src="desk/SnapshootPortfolio6.png" alt="Snapshot">
-                <div class="description">
-                    <h2 class="workstitle">Facebook 360</h2>
-                    <div class="info">
-                        <p class="subTitle">FACEBOOK</p>
-                        <ul class="infoContainer">
-                            <li class="role">Full Stack Dev</li>
-                            <li class="year">2015</li>
-                        </ul>
-                    </div>
-                    <p class="projectDescription">Exploring the future of media in Facebook's first Virtual Reality app; a place to discover and enjoy 360 photos and videos on Gear VR.
-                    </p>
-                    <div class="tags">
-                        <ul class="tagsFlex">
-                            <li class="html">HTML</li>
-                            <li class="ruby">Ruby on rails</li>
-                            <li class="css">CSS</li>
-                            <li class="javascript">Javascript</li>
-                        </ul>
-                    </div>
-                    <button type="button" class="viewProject">
-                        See Project
-                    </button>
-                </div>
-            </li>
-        </ul>
-        <ul class="card7">
-            <li class="project">
-                <img class="imageReverse" src="desk/SnapshootPortfolio7.png" alt="Snapshot">
-                <div class="descriptionReverse">
-                    <h2 class="workstitle">Uber Navigation</h2>
-                    <div class="info">
-                        <p class="subTitle">UBER</p>
-                        <ul class="infoContainer">
-                            <li class="role">Lead Developer</li>
-                            <li class="year">2018</li>
-                        </ul>
-                    </div>
-                    <p class="projectDescription">A smart assistant to make driving more safe, efficient, and fun by unlocking your most expensive computer: your car.
-                    </p>
-                    <div class="tags">
-                        <ul class="tagsFlex">
-                            <li class="html">HTML</li>
-                            <li class="css">CSS</li>
-                            <li class="javascript">Javascript</li>
-                        </ul>
-                    </div>
-                    <button type="button" class="viewProject">
-                        See Project
-                    </button>
-                </div>
-            </li>
-        </ul>
+        <section class="card5"></section>
+        <section class="card6"></section>
+        <section class="card7"></section> -->
     </section>
+
+    <section id="myModal" class="modal"></section>
 
     <section class="about-section" id="about-section">
         <div class="about-hero">
@@ -364,5 +177,6 @@
        </footer>
     
     <script src="scripts/mobile-menu.js"></script>
+    <script src="scripts/modal.js"></script>
 </body>
 </html>
