Added Dynamic Modal

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             
               <ul class="mobileNav">
                 <li class="menuMobile closeBtn"><a  class="link">&times;</a></li>
-                <li class="menuMobile"><a href="#works-section" class="link">Portfolio</a></li>
+                <li class="menuMobile"><a href="#works" class="link">Portfolio</a></li>
                 <li class="menuMobile"><a href="#about-section" class="link">About</a></li>
                 <li class="menuMobile"><a href="#contact-form" class="link">Contact</a></li>
               </ul>
@@ -66,15 +66,14 @@
 
     <section class="works-section" id="works" >
         <section class="card1"></section>
-        <!-- <section class="card2"></section>
-
+        <section class="card2"></section>
         <section class="card3"></section>
-
         <section class="card4"></section>
 
+        <section class="card8"></section>
         <section class="card5"></section>
         <section class="card6"></section>
-        <section class="card7"></section> -->
+        <section class="card7"></section>
     </section>
 
     <section id="myModal" class="modal"></section>
