Adjusted width and fonts to match figma design Popup

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="modal vanish">
       <div class="modalContainer">
         <span class="cross">&times;</span>
-        <h2 class="title modalTitle">.</h2>
+        <h3 class="modalTitle">.</h3>
         <div class="info modalInfo">
           <p class="subTitle modalSubTitle">CANOPY</p>
           <ul class="infoContainer">
