--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
         </section>
     </div>
 
-    <section id="works" class="works-section"> </section>
+    <section id="works" class="works-section">
+      
+    </section>
 
     <div class="modal vanish">
       <div class="modalContainer">
@@ -188,17 +190,18 @@
             <ul class="inputs">
                 <li>
                     <label for="name"></label>
-                    <input type="text" id="name" name="name" placeholder="Enter your name here ..." maxlength="30" required />
+                    <input type="text" id="name" class = "contactName" name="name" placeholder="Enter your name here ..." maxlength="30" required />
                 </li>
                 <li>
                     <label for="email"></label>
-                    <input type="email" id="email" name="email" placeholder="Enter your e-mail here ..." required />
+                    <input type="email" id="email" class="emailaddress" name="email" placeholder="Enter your e-mail here ..." required />
                 </li>
                 <li>
                     <label for="message"></label>
-                    <textarea id="message" placeholder="Type your message here ..." maxlength="500" required></textarea>
+                    <textarea id="message" class="contactMessage" placeholder="Type your message here ..." maxlength="500" required></textarea>
                 </li>
                 <li class="formSubmit">
+                  <p class="validationMessage"></p>
                     <input type="submit" class="submitButton" value="Get In Touch" />
                 </li>
             </ul>
