--- a/index.html
+++ b/index.html
@@ -211,5 +211,7 @@
     
     <script src="scripts/mobile-menu.js"></script>
     <script src="scripts/dynamicmodal.js"></script>
+    <script src="scripts/formvalidation.js"></script>
+    <script src="scripts/localstorage.js"></script>
 </body>
 </html>
