--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@
             <ul class="inputs">
                 <li>
                     <label for="name"></label>
-                    <input type="text" id="name" class = "contactName" name="name" placeholder="Enter your name here ..." maxlength="30" required />
+                    <input type="text" id="name" name="name" placeholder="Enter your name here ..." maxlength="30" required />
                 </li>
                 <li>
                     <label for="email"></label>
-                    <input type="email" id="email" class="emailaddress" name="email" placeholder="Enter your e-mail here ..." required />
+                    <input type="email" id="email" name="email" placeholder="Enter your e-mail here ..." required />
                 </li>
                 <li>
                     <label for="message"></label>
