--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 </li>
                 <li>
                     <label for="message"></label>
-                    <textarea id="message" class="contactMessage" placeholder="Type your message here ..." maxlength="500" required></textarea>
+                    <textarea id="message" name="message" class="contactMessage" placeholder="Type your message here ..." maxlength="500" required></textarea>
                 </li>
                 <li class="formSubmit">
                   <p id="validationMessage"></p>
